feat: reemplazar iconos por imágenes en la sección de servicios

--- a/src/pages/cuartos-limpios/index.astro
+++ b/src/pages/cuartos-limpios/index.astro
@@ -77,7 +77,7 @@ const breadcrumbSchema = generateBreadcrumbSchema([
               class="aspect-square overflow-hidden rounded-xl shadow-xl outline-1 -outline-offset-1 outline-black/10"
             >
               <img
-                src="/images/cleanrooms-page/Construcción%20Cuartos%20Limpios%20Star%20Filters.JPG"
+                src="/images/cleanrooms-page/Construccion%20Cuartos%20Limpios%20Star%20Filters.JPG"
                 alt="Construcción de cuartos limpios Star Filters"
                 class="block size-full object-cover"
               />
